testsuite/tests/parser/should_fail/T8258NoGADTs.hs
module T8258NoGADTs where

data T where
