testsuite/tests/parser/should_fail/T8258NoGADTs.stderr

T8258NoGADTs.hs:4:8: error: [GHC-36952]
    Illegal keyword 'where' in data declaration
    Suggested fix:
      Use GADTSyntax
      to enable syntax: data T where
